# final-project-compilador

./: .gitignore  CMakeLists.txt  Output_X_codigo_pseudo_adaptado.md  README.md  TODO.txt  a.out  assembly-book.txt  cacl-lexico.l  calc-sintaxis.output  calc-sintaxis.tab.c  calc-sintaxis.tab.h  calc-sintaxis.y  input.txt  input2.txt  lex.yy.c  parser  project  pseudoAssembly.c  pseudoAssembly.h  result.s  script  stack.h  symbols_table.c  symbols_table.h  tree.c  tree.h
assembly_files/: prueba.txt
code/: pseudoAssembly.c  symbols_table.c  tree.c
include/: assemblyGenerator.h  assembly_generator.h  errors_manager.h  pseudoAssembly.h  pseudo_assembly.h  symbols_table.h  tree.h
inputs/: extern.txt  fun_call.txt  input.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  same-name-functions.txt
libraries/: pseudoAssembly.h  symbols_table.h
src/: assembly_generator.c  errors_manager.c  pseudoAssembly.c  pseudo_assembly.c  symbolsTable.c  symbols_table.c  tree.c
